# awesome-applicatives

./: LICENSE  README.md  awesome-applicatives.cabal  stack.yaml
src/: Average.hs  Free.hs  Redis.hs  Result.hs
