name:                awesome-applicatives
version:             0.1.0.0
homepage:            https://github.com/srijs/awesome-applicatives
license:             BSD3
license-file:        LICENSE
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Average
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/srijs/awesome-applicatives
